<resources>
    <string name="app_name">ODDIN</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_logout">Sair</string>

    <!-- Strings related to Dialog -->
    <string name="dialog_cancel">CANCELAR</string>
    <string name="dialog_confirm">CONFIRMAR</string>
    <string name="dialog_close_presentation">Fechar aula?</string>
    <string name="dialog_accept_answer">Marcar como melhor resposta?</string>

    <!-- Strings related to Snakebar -->
    <string name="snake_no_connection">Sem conexão</string>
    <string name="snake_try_again">TENTAR NOVAMENTE</string>

    <!-- Strings related to Tabs -->
    <string name="tab_presentation_open">ABERTAS</string>
    <string name="tab_presentation_closed">FECHADAS</string>

    <!-- Strings related to validation -->
    <string name="error_invalid_email">Informe um endereço de email válido</string>
    <string name="error_invalid_password">Senha muito curta</string>
    <string name="error_field_required">Campo obrigatório</string>
    <string name="error_alternatives_required">Informe pelo menos duas alternativas</string>
    <string name="error_session_expired">Sua sessão expirou, faça login para continuar</string>
    <string name="unauthorized">Email e/ou senha incorretos</string>

    <!-- Strings related to adapters -->
    <string name="adapter_class">Turma %1$s</string>
    <string name="adapter_faq_number">%1$d)</string>
    <string name="adapter_start_date">Início %1$s </string>
    <string name="adapter_choices">%1$s Votos </string>
    <string name="adapter_choice">%1$s Voto </string>

    <!-- Strings related to Toasts -->
    <string name="toast_new_presentation_added">Nova aula adicionada</string>
    <string name="toast_fails_to_start">Falha ao iniciar</string>
    <string name="toast_voted">Você já votou esta opção</string>

    <string name="label_forgot_password">Esqueceu sua senha?</string>
    <string name="search_hint">Pesquisar</string>
    <string name="action_attachment">Material</string>
    <string name="action_participants">Participantes</string>
    <string name="navigation_drawer_open">drawerOpen</string>
    <string name="navigation_drawer_close">drawer_close</string>
    <string name="no_data_available">Vazio</string>
    <string name="dialog_send">ENVIAR</string>
    <string name="content_description_login_image">Logo Oddin</string>
    <string name="authenticating">Autenticando</string>
    <string name="error_server">Falha no servidor</string>
    <string name="dialog_ok">OK</string>
    <string name="recover_password">Recuperar senha</string>
    <string name="sending">Enviando&#8230;</string>
    <string name="new_presentation">Nova aula</string>
    <string name="toast_new_answer_added">Resposta adicionada</string>
    <string name="dialog_delete_material">Excluir material?</string>
    <string name="dialog_start_download">Fazer download?</string>
    <string name="action_home">Home</string>
    <string name="toolbar_discipline">Disciplinas</string>
    <string name="toolbar_users">Participantes</string>
    <string name="toolbar_presentation">Aulas</string>
    <string name="toast_recording">Gravando&#8230;</string>
    <string name="file_manager_info">Recomenda-se instalação do ES File Explorer File Manager</string>
    <string name="toast_request_not_completed">Requisição não completada</string>
    <string name="inauthorized">Inautorizado</string>
    <string name="action_notices">Avisos</string>
    <string name="notices">Avisos</string>
    <string name="hint_notice">Digite o aviso aqui</string>
    <string name="hint_subject">Assunto</string>
    <string name="new_notice">Novo aviso</string>
    <string name="dates">Datas importantes</string>
    <string name="action_dates">Datas importantes</string>
    <string name="hint_description">Digite descrição aqui</string>
    <string name="hint_date">Data</string>
    <string name="new_date">Nova data</string>
    <string name="toast_new_date_added">Adicionando&#8230;</string>
    <string name="toast_new_notice_added">Adicionando&#8230;</string>
    <string name="loading">Carregando&#8230;</string>
    <string name="sent">Completo&#8230;</string>
    <string name="picking_up_credentials">Obtendo credenciais&#8230;</string>
    <string name="progress_upload">Enviando&#8230;</string>
    <string name="confirm_upload">Confirmando envio ao servidor&#8230;</string>
    <string name="action">Ações</string>
    <string name="open">ABERTO</string>
    <string name="close">FECHADO</string>
    <string name="ALL">TODOS</string>
    <string name="ONLINE">ONLINE</string>
    <string name="OFFLINE">OFFLINE</string>
    <string name="ranking">RANKING</string>
    <string name="new_doubt">Nova dúvida</string>
    <string name="answer">Resposta</string>
    <string name="hint_answer">Digite a resposta aqui</string>
    <string name="hint_doubt">Digite a dúvida aqui</string>
    <string name="anonymous">Anônimo</string>
    <string name="hint_theme">Tema</string>
    <string name="hint_search">Pesquisar&#8230;</string>
    <string name="faqs">FAQs</string>
    <string name="action_faqs">FAQs</string>
    <string name="hint_question">Pergunta</string>
    <string name="new_faq">Adicionar FAQ</string>
    <string name="dialog_delete_faq">Excluir FAQ?</string>
    <string name="dialog_delete_survey">Excluir enquete?</string>
    <string name="action_survey">Enquetes</string>
    <string name="surveys">Enquetes</string>
    <string name="hint_title">Título</string>
    <string name="hint_alternative">Alternativa</string>
    <string name="new_survey">Criar Enquete</string>
    <string name="fail_to_create_file">Falha ao gerar arquivo</string>
    <string name="download_started">Download iniciado</string>
    <string name="disconnecting">Saindo&#8230;</string>
    <string name="dialog_close">FECHAR</string>
    <string name="dialog_delete">EXCLUIR</string>
    <string name="dialog_download">DOWNLOAD</string>
    <string name="dialog_accept">MARCAR</string>
    <string name="email_sent">Email enviado, acesse sua caixa de entrada.</string>
    <string name="sign_in">LOGAR</string>
</resources>