<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_magnify"
        android:orderInCategory="100"
        android:title="Search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item android:id="@+id/action_notices"
        android:title="@string/action_notices"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item android:id="@+id/action_dates"
        android:title="@string/action_dates"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item android:id="@+id/action_attachment"
        android:title="@string/action_attachment"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_participants"
        android:title="@string/action_participants"
        android:orderInCategory="100"
        app:showAsAction="never"/>

</menu>
