<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_magnify"
        android:orderInCategory="100"
        android:title="Search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_remove_presentation"
        android:orderInCategory="100"
        android:title="@string/action_remove_presentation"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_home"
        android:orderInCategory="100"
        android:title="@string/action_home"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_attachment"
        android:orderInCategory="100"
        android:title="@string/action_attachment"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_participants"
        android:orderInCategory="100"
        android:title="@string/action_participants"
        app:showAsAction="never" />

</menu>