<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".view.NewSurveyActivity">

    <include
        android:id="@+id/tb_new_survey"
        layout="@layout/toolbar" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tb_new_survey"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp">

        <EditText
            android:id="@+id/et_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_title" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/til_title"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <EditText
            android:id="@+id/et_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_question"
            android:maxLength="100" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_alternative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/til_question"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <android.support.v7.widget.AppCompatAutoCompleteTextView
            android:id="@+id/actv_alternative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_alternative"
            android:maxLength="100" />
    </android.support.design.widget.TextInputLayout>

    <ImageButton
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/til_alternative"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:background="@color/colorAccent"
        android:src="@drawable/ic_lock_open_outline" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_add">

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

</RelativeLayout>
